<resources>
    //app name
    <string name="app_name">Survival App</string>
    //login page
    <string name="first_name_text">First name:</string>
    <string name="last_name_text">Last name:</string>
    <string name="enter_button_text">Enter</string>
    <string name="welcome_to_the_app">Welcome to the app</string>
    <string name="please_enter_a_name">Please enter a full name!</string>
    //navigation drawer
    <string name="nav_header_desc">Menu</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="my_profile">Profile</string>
    <string name="content">About</string>
    <string name="fire">Fire</string>
    <string name="water">Water</string>
    <string name="shelter">Shelter</string>
    <string name="food">Food</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="content_fragment">Content Fragment</string>
    <string name="fire_fragment">Fire Fragment</string>
    <string name="water_fragment">Water Fragment</string>
    <string name="shelter_fragment">Shelter Fragment</string>
    <string name="food_fragment">Food Fragment</string>
    <string name="link_to_content_button">Link to Content Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="survival_guide">Survival Guide</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="nav_name">\"\"</string>
    <string name="debris_shelter">Debris Shelter</string>
    <string name="tarp_shelter">Tarp Shelter</string>
    <string name="snow_cave">Snow Cave Shelter</string>
    <string name="lean_to">Lean To Shelter</string>
    <string name="underground_bunker">Underground Shelter</string>
    <string name="title_activity_maps_fragment">MapsFragment</string>
    <string name="maps">Maps</string>
    <string name="email_text">Email:</string>
</resources>